--- a/assets/css/custom-popups.css
+++ b/assets/css/custom-popups.css
@@ -40,3 +40,19 @@
 .pop-up-title{
     text-align: center;
 }
+
+#custom-banner {
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background: #ff0;
+    color: #000;
+    text-align: center;
+    padding: 10px 0;
+    z-index: 10000;
+}
+
+.popup-title
+{
+    text-align: center;
+}
